# QuantumDistortion

./: .gitignore  CLAUDE.md  CODE_QUALITY_AUDIT_NOTES.md  README.md  REFACTOR_REVIEW.md  STFT_WINDOWING_AUDIT.md  V2 - Dev Plan .docx  V2 - PRD.docx  pyproject.toml  pyrightconfig.json  requirements.txt  ~$ - PRD.docx
docs/: api.md  architecture.md  audio_pipeline_overview.md  development.md  polyphonic-retune-redesign.md  ui_streamlit_v2_plan.md
docs/archive/: V2_STATUS_ASSESSMENT.md
presets/: quantum_distortion_presets.json
quantum_distortion/: __init__.py  config.py  presets.py
quantum_distortion/dsp/: __init__.py  analyses.py  autotune.py  crossover.py  distortion.py  harness.py  limiter.py  pipeline.py  quantizer.py  saturation.py  spectral_fx.py  stft_utils.py
quantum_distortion/io/: __init__.py  audio_io.py
scripts/: generate_test_fixtures.py  preview_visualizers.py  profile_pipeline.py  quick_regression_suite.py  render_cli.py  render_preset.py  test_null_passthrough.py  validate_dsp_metrics.py
tests/: test_analyses.py  test_autotune_v1.py  test_crossover.py  test_distortion.py  test_harness_smoke.py  test_imports_and_io.py  test_limiter.py  test_lowband_mono_and_saturation.py  test_m12_quantum_fx.py  test_multiband_alignment.py  test_null_test_utils.py  test_passthrough_null.py  test_pipeline.py  test_pipeline_multiband_identity.py  test_presets.py  test_quantization_integration.py  test_quantizer.py  test_spectral_fx.py  test_streamlit_app_import.py  test_visualizers.py
tests/data/: README.md
ui/: index.html  package-lock.json  package.json
(+31 files in other folders)
